tests/invalid/main_guard_multi_comparators/main.py
def run_case() -> None:
    print("x")


if __name__ == "__main__" == "__main__":
    run_case()
